--- a/view/room.html
+++ b/view/room.html
@@ -16,17 +16,17 @@
 <div class="header">
     <h4 class="text-center">Sala: <span id="room"></span></h4>
 </div>
-<div class="container">
+<div class="container content">
     <div class="row">
 
         <div class="grid-table">
             <div></div>
             <div class="grid-area grid-table-top">
-                <ul id="usersTop" class="list-users-top"></ul>
+                <div id="usersTop" class="list-users-top"></div>
             </div>
             <div></div>
             <div class="grid-area grid-table-left">
-                <ul id="usersLeft" class="list-users-left"></ul>
+                <div id="usersLeft" class="list-users-left"></div>
             </div>
             <div class="grid-area grid-table-center">
                 <div class="grid-table-center-content">
@@ -51,10 +51,10 @@
                 </div>
             </div>
             <div class="grid-area grid-table-right">
-                <ul id="usersRight" class="list-users-right"></ul>
+                <div id="usersRight" class="list-users-right"></div>
             </div>
             <div class="grid-area grid-table-bottom">
-                <ul id="usersBottom" class="list-users-bottom"></ul>
+                <div id="usersBottom" class="list-users-bottom"></div>
             </div>
         </div>
     </div>
@@ -70,9 +70,9 @@
 
 <div id="votesContainer" class="votes-container">
     <ul class="list-group fibonacci-list">
-        <li class="list-group">
-            <button class="fibonacci-button">0</button>
-        </li>
+        <!--        <li class="list-group">-->
+        <!--            <button class="fibonacci-button">0</button>-->
+        <!--        </li>-->
         <li class="list-group">
             <button class="fibonacci-button">1</button>
         </li>
