--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,10 @@
 
 }
 
+.content {
+    margin-bottom: 150px;
+}
+
 .footer {
     background-color: #082146;
     color: #fff;
@@ -99,7 +103,7 @@
 /* Game board */
 
 .user-table {
-    width: 100px;
+    width: auto;
     min-height: 100px;
     display: flex;
     flex-direction: column;
@@ -118,7 +122,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #082146;
+    transition: ease all .5s;
 }
 
 .votes-count {
@@ -260,7 +264,7 @@
 /* grid table */
 .grid-table {
     display: inline-grid;
-    grid-template-rows: auto 1fr 12rem;
+    grid-template-rows: auto 1fr auto;
     grid-gap: 0.4rem;
     grid-template-areas:
         "left top right"
@@ -270,6 +274,7 @@
     margin: 2rem auto auto;
     min-height: 200px;
     width: auto;
+    transition: ease all .5s;
 }
 
 .grid-area {
@@ -285,11 +290,10 @@
     grid-area: top;
 }
 
-.grid-table-top ul {
+.grid-table-top div {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
     padding: 0;
 }
 
@@ -299,6 +303,7 @@
     background-size: 300px;
     background-repeat: no-repeat;
     background-position: center;
+    transition: ease all .5s;
 }
 
 .grid-table-center-content {
@@ -316,17 +321,17 @@
     background: rgb(8, 33, 70);
     background: linear-gradient(90deg, rgba(8, 33, 70, 1) 0%, rgba(8, 33, 70, 0.5382528011204482) 100%);
     color: #fff;
+    transition: ease all .5s;
 }
 
 .grid-table-bottom {
     grid-area: bottom;
 }
 
-.grid-table-bottom ul {
+.grid-table-bottom div {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
     padding: 0;
 }
 
@@ -334,7 +339,7 @@
     grid-area: left;
 }
 
-.grid-table-left ul {
+.grid-table-left div {
     padding: 0;
 }
 
@@ -342,7 +347,7 @@
     grid-area: right;
 }
 
-.grid-table-right ul {
+.grid-table-right div {
     padding: 0;
 }
 
