--- a/view/room.html
+++ b/view/room.html
@@ -6,15 +6,15 @@
     <title>Pivot Poker</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-<div class="header">
-    <h4 class="text-center">Sala: <span id="room"></span></h4>
+<div class="header header-name">
+    <span class="text-center">Sala: <span id="room"></span></span>
+    <div id="adminOptionsDiv" class="admin-options-check"><input type="checkbox" class="form-check-input"
+                                                                 id="adminOptionsCheckbox"> <span
+            class="AdminOptionsText">Mostrar opciones de administración</span></div>
+    <span class="text-center"><span id="userName"></span></span>
 </div>
 <div class="container content">
     <div class="row">
@@ -115,6 +115,7 @@
             </div>
             <div class="modal-body">
                 <input type="text" class="form-control" id="name" placeholder="Nombre">
+                <input type="checkbox" class="form-check-input" id="rememberName"> <span class="rememberNameText">Recordar nombre</span>
             </div>
             <div class="modal-footer">
                 <button type="button" id="submitName" class="btn btn-primary">Entrar</button>
@@ -127,6 +128,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script type="module" src="/js/poker.js"></script>
 </body>
