--- a/view/room.html
+++ b/view/room.html
@@ -13,7 +13,7 @@
     <span class="text-center">Sala: <span id="room"></span></span>
     <div id="adminOptionsDiv" class="admin-options-check"><input type="checkbox" class="form-check-input"
                                                                  id="adminOptionsCheckbox"> <span
-            class="AdminOptionsText">Mostrar opciones de administración</span></div>
+            class="AdminOptionsText">Mostrar opciones de administración</span> <span class="admin-force-reveal" id="adminForceReveal">Revelar cartas</span></div>
     <span class="text-center"><span id="userName"></span></span>
 </div>
 <div class="container content">
