--- a/public/css/style.css
+++ b/public/css/style.css
@@ -494,6 +494,16 @@ ul {
     flex-direction: column;
 }
 
+.fireworks-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    pointer-events: none;
+}
+
 @media (max-width: 768px) {
     .grid-table {
         grid-template-rows: auto 1fr auto;
